<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/action_sheet_root" >

    
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/grey_500" />

    <Button
        android:id="@+id/action_sheet_photo_camera_bt"
        style="@style/action_sheet_bt"
        android:text="@string/photo_camera" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/grey_500" />

    <Button
        android:id="@+id/action_sheet_photo_album_bt"
        style="@style/action_sheet_bt"
        android:text="@string/photo_album" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/grey_500" />

    <Button
        android:id="@+id/action_sheet_cancle_bt"
        style="@style/action_sheet_bt"
        android:text="@string/cancle" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/grey_500" />

</LinearLayout>