<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:orientation="vertical" >

    <include
        android:id="@+id/login_top"
        layout="@layout/layout_title" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_height"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/eidt_bg" >

        <ImageView
            android:id="@+id/iv_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/icon_login_user" />

        <EditText
            android:id="@+id/edt_user"
            android:layout_width="match_parent"
            android:layout_height="@dimen/title_height"
            android:layout_toRightOf="@id/iv_user"
            android:background="@null"
            android:hint="@string/register_phone"
            android:inputType="number"
            android:textColor="@color/grey_700" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_height"
        android:layout_margin="10dp"
        android:background="@drawable/eidt_bg" >

        <ImageView
            android:id="@+id/iv_pwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/icon_login_lock" />

        <EditText
            android:id="@+id/edt_password"
            android:layout_width="match_parent"
            android:layout_height="@dimen/title_height"
            android:layout_toRightOf="@id/iv_pwd"
            android:background="@null"
            android:hint="@string/register_pwd"
            android:inputType="textPassword"
            android:textColor="@color/grey_700" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_height"
        android:layout_margin="10dp"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/edt_yanzhengma"
            android:layout_width="match_parent"
            android:layout_height="@dimen/title_height"
            android:layout_weight="3"
            android:background="@drawable/eidt_bg"
            android:hint="请输入验证码"
            android:paddingLeft="10dp"
            android:textColor="@color/grey_700" />

        <Button
            android:id="@+id/btn_yanzhengma"
            android:layout_width="match_parent"
            android:layout_height="@dimen/title_height"
            android:layout_marginLeft="10dp"
            android:layout_weight="4"
            android:background="@drawable/bt_grey_logon_default"
            android:inputType="number"
            android:text="获取验证码"
            android:textColor="@color/grey_700"
            android:textSize="@dimen/text_size_nor" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal" >

        <CheckBox
            android:id="@+id/ckb_follow"
            style="@style/CustomCheckboxTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:padding="10dp"
            android:text="同意" />

        <TextView
            android:id="@+id/tv_zhengce"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/register_zhengce"
            android:textColor="@color/common" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_height"
        android:layout_margin="10dp"
        android:background="@drawable/btn_red_selector"
        android:text="立即注册"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_nor__" />

</LinearLayout>