<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:orientation="vertical" >

    <include
        android:id="@+id/login_top"
        layout="@layout/layout_title" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_height"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/eidt_bg" >

        <ImageView
            android:id="@+id/iv_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/icon_login_user" />

        <EditText
            android:id="@+id/edt_user"
            android:layout_width="match_parent"
            android:layout_height="@dimen/title_height"
            android:layout_toRightOf="@id/iv_user"
            android:background="@null"
            android:hint="@string/register_phone"
            android:inputType="number"
            android:textColor="@color/grey_700" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_height"
        android:layout_margin="10dp"
        android:background="@drawable/eidt_bg" >

        <ImageView
            android:id="@+id/iv_pwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/icon_login_lock" />

        <EditText
            android:id="@+id/edt_password"
            android:layout_width="match_parent"
            android:layout_height="@dimen/title_height"
            android:layout_toRightOf="@id/iv_pwd"
            android:background="@null"
            android:hint="@string/register_pwd"
            android:inputType="textPassword"
            android:textColor="@color/grey_700" />
    </RelativeLayout>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_height"
        android:layout_margin="10dp"
        android:background="@drawable/btn_red_selector"
        android:text="@string/login_title"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_nor__" />

    <TextView
        android:id="@+id/tv_forget_pwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        android:gravity="right"
        android:text="忘记密码"
        android:textColor="@color/grey_700"
        android:textSize="@dimen/text_size_nor" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal" >

        <View
            android:layout_width="0dp"
            android:layout_height="0.5dp"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:background="@color/grey_300" />

        <TextView
            android:id="@+id/tv_third"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.2"
            android:padding="5dp"
            android:text="第三方账号登录"
            android:textColor="@color/grey_700"
            android:textSize="@dimen/text_size_nor" />

        <View
            android:layout_width="0dp"
            android:layout_height="0.5dp"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:background="@color/grey_300" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal" >

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:scaleType="center"
            android:src="@drawable/btn_qq_selector" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:scaleType="center"
            android:src="@drawable/btn_wechat_selector" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:scaleType="center"
            android:src="@drawable/btn_weibo_selector" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tv_qq"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="QQ"
            android:textColor="@color/grey_700"
            android:textSize="@dimen/text_size_nor" />

        <TextView
            android:id="@+id/tv_wechat"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="微信"
            android:textColor="@color/grey_700"
            android:textSize="@dimen/text_size_nor" />

        <TextView
            android:id="@+id/tv_sina"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="新浪微博"
            android:textColor="@color/grey_700"
            android:textSize="@dimen/text_size_nor" />
    </LinearLayout>

</LinearLayout>